tests/atest/rules/errors/unsupported_setting_in_init_file/__init__.robot
*** Settings ***
Test Template       template
Default Tags        tag
Documentation       some documentation


*** Variables ***
${VAR}   a
